FullQa New/src/FinancialForce Revenue Management/objects/Settings__c.object
<CustomObject>
    <customHelpPage>helpsettings</customHelpPage>
    <description>Contains the details of the object and field mappings that make up Revenue Recognition settings.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <inlineHelpText>API name of the field on the source object that represents the account. Typically this will be the standard Salesforce account, but it can be any Text, Picklist, Lookup, Number, Auto number or Formula field.</inlineHelpText>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveField__c</fullName>
        <inlineHelpText>API name of the field on the source object that indicates whether it is active. To include records in Revenue Management when a field has a specific value, set the field name in Active Field, the value in Active Value and set Include Active Value to True.</inlineHelpText>
        <label>Active Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveValue__c</fullName>
        <inlineHelpText>Value on the active field that indicates whether the source record is active.</inlineHelpText>
        <label>Active Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualVsForecastRelationship__c</fullName>
        <inlineHelpText>API name of the lookup field (to the source object of this setting) that your administrator has added to the Actuals vs Forecast Line object. This field is mandatory when the option to Use Actual vs Forecast Feature is enabled.</inlineHelpText>
        <label>Actual vs Forecast Line Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmortizedToDateValue__c</fullName>
        <inlineHelpText>API name of the Number or Currency field on the source object that stores the amount of cost amortized to date. If populated, the value on the source record is automatically updated each time a Revenue Recognition Transaction is committed.</inlineHelpText>
        <label>Amortized To Date Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalanceSheetAccount__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the balance sheet (deferred income) account to which the revenue recognition journals are posted.</inlineHelpText>
        <label>Balance Sheet Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BilledToDate__c</fullName>
        <description>Not in use. Reserved for possible future use.</description>
        <label>Billed To Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChainID__c</fullName>
        <label>Chain ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedField__c</fullName>
        <inlineHelpText>API name of the field on the source object that indicates its completion status. If a Deliverable type template is created for this setting, revenue will be recognized when the source record is complete.</inlineHelpText>
        <label>Completed Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedValue__c</fullName>
        <inlineHelpText>Value on the active field that indicates whether the source record is complete. If a Deliverable type template is created for this setting, revenue will be recognized when the source record is complete.</inlineHelpText>
        <label>Completed Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostBalanceSheetAccount__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the balance sheet (deferred income) account to which the revenue recognition journals are posted.</inlineHelpText>
        <label>Balance Sheet Account (Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the specific component of your chart of accounts by which your management accounts are sub-analyzed.</inlineHelpText>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCostCenter__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the specific component of your chart of accounts by which your management accounts are sub-analyzed.</inlineHelpText>
        <label>Cost Center (Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostIncomeStatementAccount__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the income statement (cost) account to which the revenue recognition journals are posted.</inlineHelpText>
        <label>Income Statement Account (Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostRate__c</fullName>
        <inlineHelpText>API name of the field on the source object that represents the rate at which cost units are charged.</inlineHelpText>
        <label>Cost Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostTotalUnits__c</fullName>
        <inlineHelpText>API name of the Number field on the source object that represents the total number of cost units charged. The cost units&apos; value could be the total number of hours or days worked on a project for example.</inlineHelpText>
        <label>Total Cost Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <inlineHelpText>API name of the Text field on the source object that represents the currency of the source record.</inlineHelpText>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultFieldMappingDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Field Mapping Definition Populated on Performance Obligation Line Items by default when linking them to a Source Record and this Settings.</description>
        <inlineHelpText>The Field Mapping Definition Populated on Performance Obligation Line Items by default when linking them to a Source Record and this Settings.</inlineHelpText>
        <label>Default Field Mapping Definition</label>
        <referenceTo>FieldMappingDefinition__c</referenceTo>
        <relationshipLabel>Settings</relationshipLabel>
        <relationshipName>Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>API name of the Text or Long Text Area field on the source object that contains a description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>API name of the Date or DateTime field on the source object that represents its end date.</inlineHelpText>
        <label>End Date/Deliverable Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter1__c</fullName>
        <label>Deprecated Filter 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter2__c</fullName>
        <label>Deprecated Filter 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter3__c</fullName>
        <label>Deprecated Filter 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixedBalanceSheetAccountCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Balance Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCostBalanceSheetAccountCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Balance Sheet (Cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCostCenterCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Cost Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCostCostCenterCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Cost Center (Cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedCostIncomeStatementAccountCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Income Statement (Cost)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FixedIncomeStatementAccountCode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to indicate that the corresponding value is a fixed code, not an API name on the related source object. These checkboxes can be set independently of each other.</inlineHelpText>
        <label>Fixed Income Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForecastHeaderPrimaryRelationship__c</fullName>
        <inlineHelpText>API name of the lookup field (to the source object at this settings level) that your administrator has added to the Revenue Forecast Transaction object. This must be populated if the settings type is Forecast and the settings level is Primary.</inlineHelpText>
        <label>Revenue Forecast Transaction Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastTransactionLineRelationship__c</fullName>
        <inlineHelpText>API name of the lookup field (to the source object at this settings level) that your administrator has added to the Revenue Forecast Transaction Line object. This must be populated if the settings type is Forecast.</inlineHelpText>
        <label>Revenue Forecast Transaction Line Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>If( ISBLANK( ParentSettings__c ), Object__c , ParentSettings__r.GroupName__c)</formula>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeActiveValue__c</fullName>
        <inlineHelpText>Include or Exclude source records with the value defined in Active Value field.</inlineHelpText>
        <label>Include Active Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncludeCompletedValue__c</fullName>
        <inlineHelpText>Include or Exclude source records with the value defined in Completed Value field.</inlineHelpText>
        <label>Include Completed Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncomeStatementAccount__c</fullName>
        <inlineHelpText>API name of the text field, lookup or picklist on the source object that represents the income statement (revenue) account to which the revenue recognition journals are posted.</inlineHelpText>
        <label>Income Statement Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>API name of the object that acts as the data source at this level. This cannot change once the setting is used on a template. For non-primary settings, the object must be in a master-detail or lookup relationship with the object on its parent setting.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLISourceField__c</fullName>
        <description>The API name of the lookup field on the Performance Obligation Line Item that looks up to the Source Record.</description>
        <inlineHelpText>API name of the lookup field (to the source object of this setting) that your administrator has added to the Performance Obligation Line Item object.</inlineHelpText>
        <label>POLI Source Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSettings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the parent settings record (the settings record for the source object one level above this one in the hierarchy).</inlineHelpText>
        <label>Parent Settings</label>
        <referenceTo>Settings__c</referenceTo>
        <relationshipLabel>ParentSettings</relationshipLabel>
        <relationshipName>ParentSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentageComplete__c</fullName>
        <inlineHelpText>API name of the Number or Percentage field on the source object that represents how complete the source record is in percentage terms.</inlineHelpText>
        <label>% Complete</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRelationship__c</fullName>
        <inlineHelpText>Enter the API name of the lookup field to the source object of the parent setting.</inlineHelpText>
        <label>Parent Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <inlineHelpText>API name of the field on the source object that represents the rate at which units are charged.</inlineHelpText>
        <label>Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecognizedToDateValue__c</fullName>
        <inlineHelpText>API name of the Number or Currency field on the source object that stores the amount of revenue recognized to date. If populated, the value on the source record is automatically updated each time a Revenue Recognition Transaction is committed.</inlineHelpText>
        <label>Recognized To Date Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueRecognitionCompleted__c</fullName>
        <inlineHelpText>API name of the Boolean field on the source object that indicates all revenue is fully recognized and all cost fully amortized. If populated, the source record&apos;s checkbox is automatically enabled when revenue is fully recognized and cost fully amortized.</inlineHelpText>
        <label>Fully Recognized and Amortized</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSP__c</fullName>
        <description>API name of the field on the source object that represents the standalone selling price.</description>
        <inlineHelpText>API name of the field on the source object that stores the standalone selling price for a performance obligation line item.</inlineHelpText>
        <label>SSP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingUniqueness__c</fullName>
        <formula>Object__c &amp; Group__c &amp; TEXT( SettingsLevel__c ) &amp; PercentageComplete__c &amp; TotalRevenue__c &amp; BilledToDate__c &amp; ParentSettings__c &amp; Description__c &amp; TotalUnits__c &amp; PrimaryRelationship__c &amp; CompletedValue__c &amp; CompletedField__c &amp; ActiveValue__c &amp; ActiveField__c &amp; TEXT( IncludeCompletedValue__c ) &amp; TEXT( IncludeActiveValue__c ) &amp; Currency__c &amp; VSOERate__c &amp; VSOEPercent__c &amp; AccountName__c &amp; Rate__c &amp; RecognizedToDateValue__c &amp; RevenueRecognitionCompleted__c &amp; If ( UseInRevenueContract__c, &apos;TRUE&apos;, &apos;FALSE&apos; ) &amp; SSP__c</formula>
        <label>Deprecated Setting Uniqueness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SettingsLevel__c</fullName>
        <inlineHelpText>Select the level of this source object settings record.</inlineHelpText>
        <label>Settings Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SettingsType__c</fullName>
        <inlineHelpText>The type of process this settings record will be used for: Actual, Forecast, or both. If the mappings are identical for both actual and forecast processes, create one settings record for use by both.</inlineHelpText>
        <label>Settings Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>API name of the Date or DateTime field on the source object that represents the start date.</inlineHelpText>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <inlineHelpText>API name of the Number or Currency field on the source object that represents the total cost.</inlineHelpText>
        <label>Total Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalRevenue__c</fullName>
        <inlineHelpText>API name of the Number or Currency field on the source object that represents the total revenue.</inlineHelpText>
        <label>Total Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalUnits__c</fullName>
        <inlineHelpText>API name of the Number field on the source object that represents the total number of units charged. The total units&apos; value could be the number of hours or days worked on a project for example.</inlineHelpText>
        <label>Total Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionLineRelationship__c</fullName>
        <inlineHelpText>API name of the lookup field (to the source object at this settings level) that your administrator has added to the Revenue Recognition Transaction Line object. This must be populated if the Settings Type is Actual.</inlineHelpText>
        <label>Revenue Recognition Txn Line Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseInRevenueContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show whether the Setting is used in Revenue Contracts.</description>
        <inlineHelpText>Is this Setting used in Revenue Contracts.</inlineHelpText>
        <label>Use in Revenue Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSOEPercent__c</fullName>
        <inlineHelpText>API name of the Number or Percentage field on the source object that represents the VSOE (Vendor Specific Objective Evidence) percentage.</inlineHelpText>
        <label>VSOE %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSOERate__c</fullName>
        <inlineHelpText>API name of the Number or Currency field on the source object that represents the VSOE (Vendor Specific Objective Evidence) rate.</inlineHelpText>
        <label>VSOE Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValueType__c</fullName>
        <inlineHelpText>The type of processing this settings record will be used for: Revenue, Cost, or both.</inlineHelpText>
        <label>Value Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UseInRevenueContract__c</columns>
        <columns>SettingsLevel__c</columns>
        <columns>SettingsType__c</columns>
        <columns>ValueType__c</columns>
        <columns>Object__c</columns>
        <columns>Description__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TotalRevenue__c</columns>
        <columns>ActiveField__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Revenue_Contracts</fullName>
        <columns>NAME</columns>
        <columns>UseInRevenueContract__c</columns>
        <columns>SettingsLevel__c</columns>
        <columns>SettingsType__c</columns>
        <columns>ValueType__c</columns>
        <columns>Object__c</columns>
        <columns>Description__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TotalRevenue__c</columns>
        <columns>ActiveField__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UseInRevenueContract__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Used in Revenue Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Revenue_Recognition</fullName>
        <columns>NAME</columns>
        <columns>UseInRevenueContract__c</columns>
        <columns>SettingsLevel__c</columns>
        <columns>SettingsType__c</columns>
        <columns>ValueType__c</columns>
        <columns>Object__c</columns>
        <columns>Description__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>TotalRevenue__c</columns>
        <columns>ActiveField__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UseInRevenueContract__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Used for Revenue Recognition</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>